--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  google_ml_kit: ^0.18.0
   material_segmented_control: ^5.0.0
+  custom_sliding_segmented_control: ^1.8.2
+  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
