--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.1.0 <4.0.0"
+  sdk: ">=3.3.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,11 +30,14 @@ environment:
 dependencies:
   camera: ^0.10.5+9
   cupertino_icons: ^1.0.2
+  custom_sliding_segmented_control: ^1.8.2
   flutter:
     sdk: flutter
-  material_segmented_control: ^5.0.0
-  custom_sliding_segmented_control: ^1.8.2
-  
+  google_ml_kit: ^0.18.0
+  image_picker: ^1.1.1
+  page_transition: ^2.1.0
+  path: ^1.9.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -53,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/unmsm.png
+    - assets/images/photo_demo.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
