--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  camera: ^0.10.5+9
+  camera: ^0.10.6
   cupertino_icons: ^1.0.2
   custom_sliding_segmented_control: ^1.8.2
   flutter:
@@ -37,9 +37,10 @@ dependencies:
   image_picker: ^1.1.1
   path: ^1.9.0
   path_provider: ^2.1.3
+  tflite_flutter: ^0.10.4
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
@@ -54,8 +55,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/unmsm.png
-    - assets/images/photo_demo.jpg
+    - assets/images/
+    - assets/json/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
