--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
     sdk: flutter
   google_ml_kit: ^0.18.0
   image_picker: ^1.1.1
+  lottie: ^3.1.0
   path: ^1.9.0
   path_provider: ^2.1.3
-  tflite_flutter: ^0.10.4
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -57,6 +57,7 @@ flutter:
   assets:
     - assets/images/
     - assets/json/
+    - assets/animations/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
