--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
+  google_fonts: ^6.2.1
   google_ml_kit: ^0.18.0
   image_picker: ^1.1.1
   lottie: ^3.1.0
