--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
   google_ml_kit: ^0.18.0
+  http: ^1.2.1
   image_picker: ^1.1.1
   lottie: ^3.1.0
   path: ^1.9.0
