--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,20 @@ dependencies:
   camera: ^0.10.6
   cupertino_icons: ^1.0.2
   custom_sliding_segmented_control: ^1.8.2
+  flashy_tab_bar2: ^0.0.10
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
+  flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   google_ml_kit: ^0.18.0
   http: ^1.2.1
   image_picker: ^1.1.1
   lottie: ^3.1.0
+  material_symbols_icons: ^4.2762.0
   path: ^1.9.0
   path_provider: ^2.1.3
+  provider: ^6.1.2
   shared_preferences: ^2.2.3
 
 dev_dependencies:
