--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.3
 
+  google_mlkit_commons: any
 dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
