--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
   camera: ^0.10.6
   cupertino_icons: ^1.0.2
   custom_sliding_segmented_control: ^1.8.2
   flashy_tab_bar2: ^0.0.10
-  flutter:
-    sdk: flutter
   flutter_native_splash: ^2.4.0
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
@@ -46,7 +46,7 @@ dependencies:
   path_provider: ^2.1.3
   provider: ^6.1.2
   shared_preferences: ^2.2.3
-
+  flutter_dotenv: ^5.1.0
   google_mlkit_commons: any
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -67,6 +67,7 @@ flutter:
     - assets/images/
     - assets/json/
     - assets/animations/
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
